add checkbox component

--- a/client/src/shared/lib/lang/translations/ru/auth.json
+++ b/client/src/shared/lib/lang/translations/ru/auth.json
@@ -5,9 +5,11 @@
   "firstname": "Имя",
   "lastname": "Фамилия",
   "isRemember": "Запомнить?",
+  "signIn": "Войти",
+  "signUn": "Зарегестрироваться",
   "errors": {
-    "email": "Пожалуйста, введите корректный e-mail",
-    "length": "Длина должна быть больше {count} символов",
+    "invalidEmail": "Пожалуйста, введите корректный e-mail",
+    "length": "Длина должна быть больше {{count}} символов",
     "empty": "Поле не должно быть пустым"
   }
 }
