--- a/client/src/shared/lib/lang/translations/en/auth.json
+++ b/client/src/shared/lib/lang/translations/en/auth.json
@@ -5,9 +5,11 @@
   "firstname": "First name",
   "lastname": "Last name",
   "isRemember": "Is remember",
+  "signIn": "Sign in",
+  "signUn": "Sign up",
   "errors": {
-    "email": "Please, enter correct email",
-    "length": "Length must be more than {count} characters",
+    "invalidEmail": "Please, enter correct email",
+    "length": "Length must be more than {{count}} characters",
     "empty": "The field must not be empty"
   }
 }
