try to make protected route component

--- a/client/src/shared/lib/lang/translations/en/common.json
+++ b/client/src/shared/lib/lang/translations/en/common.json
@@ -1,5 +1,7 @@
 {
   "helloWorld": "Hello, world!",
   "openMenu": "Open menu",
-  "closeMenu": "Close menu"
+  "closeMenu": "Close menu",
+  "signIn": "Sign in",
+  "signUp": "Sign up"
 }
