--- a/client/src/shared/lib/lang/translations/ru/common.json
+++ b/client/src/shared/lib/lang/translations/ru/common.json
@@ -1,5 +1,7 @@
 {
   "helloWorld": "Привет, мир!",
   "openMenu": "Открыть меню",
-  "closeMenu": "Закрыть меню"
+  "closeMenu": "Закрыть меню",
+  "signIn": "Войти",
+  "signUp": "Зарегестрироваться"
 }
