make auth, fixes

--- a/client/src/shared/lib/lang/translations/en/auth.json
+++ b/client/src/shared/lib/lang/translations/en/auth.json
@@ -1,10 +1,18 @@
 {
   "email": "E-mail",
   "password": "Password",
-  "login": "Login",
-  "firstname": "First name",
-  "lastname": "Last name",
+  "name": "Name",
+  "surname": "Surname",
+  "username": "Username",
   "isRemember": "Is remember",
+  "haveAccount": {
+    "title": "login ",
+    "text": "if you already have an account"
+  },
+  "haveNotAccount": {
+    "title": "register ",
+    "text": "if you do not have an account yet"
+  },
   "errors": {
     "invalidEmail": "Please, enter correct email",
     "length": "Length must be more than {{count}} characters",
