--- a/client/src/shared/lib/lang/translations/ru/auth.json
+++ b/client/src/shared/lib/lang/translations/ru/auth.json
@@ -1,10 +1,18 @@
 {
   "email": "E-mail",
   "password": "Пароль",
-  "login": "Логин",
-  "firstname": "Имя",
-  "lastname": "Фамилия",
+  "name": "Имя",
+  "surname": "Фамилия",
+  "username": "Логин",
   "isRemember": "Запомнить?",
+  "haveAccount": {
+    "title": "Войдите",
+    "text": ", если у вас уже есть аккаунт"
+  },
+  "haveNotAccount": {
+    "title": "Зарегистрируйтесь",
+    "text": ", если у вас еще нет аккаунта"
+  },
   "errors": {
     "invalidEmail": "Пожалуйста, введите корректный e-mail",
     "length": "Длина должна быть больше {{count}} символов",
