--- a/client/src/shared/lib/lang/translations/ru/common.json
+++ b/client/src/shared/lib/lang/translations/ru/common.json
@@ -3,5 +3,5 @@
   "openMenu": "Открыть меню",
   "closeMenu": "Закрыть меню",
   "signIn": "Войти",
-  "signUp": "Зарегестрироваться"
+  "signUp": "Зарегистрироваться"
 }
