--- a/client/src/shared/lib/lang/translations/en/auth.json
+++ b/client/src/shared/lib/lang/translations/en/auth.json
@@ -1,6 +1,7 @@
 {
   "email": "E-mail",
   "password": "Password",
+  "repeatPassword": "Repeat password",
   "name": "Name",
   "surname": "Surname",
   "username": "Username",
@@ -16,6 +17,7 @@
   "errors": {
     "invalidEmail": "Please, enter correct email",
     "length": "Length must be more than {{count}} characters",
-    "empty": "The field must not be empty"
+    "empty": "The field must not be empty",
+    "passwordMismatch": "Password mismatch"
   }
 }
