--- a/client/src/shared/lib/lang/translations/ru/auth.json
+++ b/client/src/shared/lib/lang/translations/ru/auth.json
@@ -1,6 +1,7 @@
 {
   "email": "E-mail",
   "password": "Пароль",
+  "repeatPassword": "Повторите пароль",
   "name": "Имя",
   "surname": "Фамилия",
   "username": "Логин",
@@ -16,6 +17,7 @@
   "errors": {
     "invalidEmail": "Пожалуйста, введите корректный e-mail",
     "length": "Длина должна быть больше {{count}} символов",
-    "empty": "Поле не должно быть пустым"
+    "empty": "Поле не должно быть пустым",
+    "passwordMismatch": "Пароли не совпадают"
   }
 }
