add lang dropdown and theme switcher components, implements theme, auth fixes, add profile page

--- a/client/src/shared/lib/lang/translations/en/auth.json
+++ b/client/src/shared/lib/lang/translations/en/auth.json
@@ -7,12 +7,12 @@
   "username": "Username",
   "isRemember": "Is remember",
   "haveAccount": {
-    "title": "login ",
-    "text": "if you already have an account"
+    "title": "Login",
+    "text": " if you already have an account"
   },
   "haveNotAccount": {
-    "title": "register ",
-    "text": "if you do not have an account yet"
+    "title": "Register",
+    "text": " if you do not have an account yet"
   },
   "errors": {
     "invalidEmail": "Please, enter correct email",
