--- a/client/src/shared/lib/lang/translations/ru/common.json
+++ b/client/src/shared/lib/lang/translations/ru/common.json
@@ -3,5 +3,17 @@
   "openMenu": "Открыть меню",
   "closeMenu": "Закрыть меню",
   "signIn": "Войти",
-  "signUp": "Зарегистрироваться"
+  "signUp": "Зарегистрироваться",
+  "goToLink": "Перейти на страницу {{link}}",
+  "header": {
+    "theme": "Тема",
+    "settings": "Настройки",
+    "logOut": "Выйти",
+    "themeSwitcher": {
+      "scheme": "Схема",
+      "light": "Светлая",
+      "dark": "Темная",
+      "auto": "Системная"
+    }
+  }
 }
