add dockerfile, refactor

--- a/src/shared/lib/lang/translations/en/navigation.json
+++ b/src/shared/lib/lang/translations/en/navigation.json
@@ -3,5 +3,6 @@
   "news": "News",
   "messages": "Messages",
   "settings": "Settings",
-  "groups": "Groups"
+  "groups": "Groups",
+  "users": "Friends"
 }
