--- a/src/shared/lib/lang/translations/ru/navigation.json
+++ b/src/shared/lib/lang/translations/ru/navigation.json
@@ -3,5 +3,6 @@
   "news": "Новости",
   "messages": "Сообщения",
   "settings": "Настройки",
-  "groups": "Сообщества"
+  "groups": "Сообщества",
+  "users": "Друзья"
 }
