fix auth, add users page; fixes

--- a/src/shared/lib/lang/translations/en/auth.json
+++ b/src/shared/lib/lang/translations/en/auth.json
@@ -16,8 +16,11 @@
   },
   "errors": {
     "invalidEmail": "Please, enter correct email",
-    "length": "Length must be more than {{count}} characters",
+    "minLength": "The length should be longer",
+    "maxLength": "The length should be less",
     "empty": "The field must not be empty",
-    "passwordMismatch": "Password mismatch"
+    "passwordMismatch": "Password mismatch",
+    "alreadyExists": "A user with this email or username already exists",
+    "incorrectData": "Invalid email or password"
   }
 }
