--- a/src/shared/lib/lang/translations/ru/auth.json
+++ b/src/shared/lib/lang/translations/ru/auth.json
@@ -16,8 +16,11 @@
   },
   "errors": {
     "invalidEmail": "Пожалуйста, введите корректный e-mail",
-    "length": "Длина должна быть больше {{count}} символов",
+    "minLength": "Длина должна быть больше",
+    "maxLength": "Длина должна быть меньше",
     "empty": "Поле не должно быть пустым",
-    "passwordMismatch": "Пароли не совпадают"
+    "passwordMismatch": "Пароли не совпадают",
+    "alreadyExists": "Пользователь с таким email или логином уже существует",
+    "incorrectData": "Неверный email или пароль"
   }
 }
