refactor auth forms

--- a/src/shared/lib/lang/translations/en/auth.json
+++ b/src/shared/lib/lang/translations/en/auth.json
@@ -15,10 +15,11 @@
     "text": " if you do not have an account yet"
   },
   "errors": {
-    "invalidEmail": "Please, enter correct email",
-    "minLength": "The length should be longer",
-    "maxLength": "The length should be less",
-    "empty": "The field must not be empty",
+    "pattern": "Please, enter correct email",
+    "passwordPattern": "The password must contain from 8 to 20 characters, at least 1 digit, 1 lowercase letter and 1 uppercase letter",
+    "minLength": "The length must be more than {{count}} characters",
+    "maxLength": "The length must be less than {{count}} characters",
+    "required": "The field must not be empty",
     "passwordMismatch": "Password mismatch",
     "alreadyExists": "A user with this email or username already exists",
     "incorrectData": "Invalid email or password"
