--- a/src/shared/lib/lang/translations/ru/auth.json
+++ b/src/shared/lib/lang/translations/ru/auth.json
@@ -15,10 +15,11 @@
     "text": ", если у вас еще нет аккаунта"
   },
   "errors": {
-    "invalidEmail": "Пожалуйста, введите корректный e-mail",
-    "minLength": "Длина должна быть больше",
-    "maxLength": "Длина должна быть меньше",
-    "empty": "Поле не должно быть пустым",
+    "pattern": "Пожалуйста, введите корректный e-mail",
+    "passwordPattern": "Пароль должен содержать от 8 до 20 символов, как минимум 1 цифру, 1 букву нижнего регистра и 1 букву верхнего регистра",
+    "minLength": "Длина должна быть больше {{count}} символов",
+    "maxLength": "Длина должна быть меньше {{count}} символов",
+    "required": "Поле не должно быть пустым",
     "passwordMismatch": "Пароли не совпадают",
     "alreadyExists": "Пользователь с таким email или логином уже существует",
     "incorrectData": "Неверный email или пароль"
