--- a/src/shared/lib/lang/translations/en/auth.json
+++ b/src/shared/lib/lang/translations/en/auth.json
@@ -16,7 +16,7 @@
   },
   "errors": {
     "pattern": "Please, enter correct email",
-    "passwordPattern": "The password must contain from 8 to 20 characters, at least 1 digit, 1 lowercase letter and 1 uppercase letter",
+    "passwordPattern": "The password must contain from 8 to 20 characters, at least 1 digit, 1 lowercase and uppercase letter and a special character (!, ?...)",
     "minLength": "The length must be more than {{count}} characters",
     "maxLength": "The length must be less than {{count}} characters",
     "required": "The field must not be empty",
