--- a/src/shared/lib/lang/translations/ru/auth.json
+++ b/src/shared/lib/lang/translations/ru/auth.json
@@ -16,7 +16,7 @@
   },
   "errors": {
     "pattern": "Пожалуйста, введите корректный e-mail",
-    "passwordPattern": "Пароль должен содержать от 8 до 20 символов, как минимум 1 цифру, 1 букву нижнего регистра и 1 букву верхнего регистра",
+    "passwordPattern": "Пароль должен содержать от 8 до 20 символов, как минимум 1 цифру, 1 букву нижнего и верхнего регистра и специальный символ (!, ?...)",
     "minLength": "Длина должна быть больше {{count}} символов",
     "maxLength": "Длина должна быть меньше {{count}} символов",
     "required": "Поле не должно быть пустым",
