--- a/src/shared/lib/lang/translations/en/navigation.json
+++ b/src/shared/lib/lang/translations/en/navigation.json
@@ -4,5 +4,6 @@
   "messages": "Messages",
   "settings": "Settings",
   "groups": "Groups",
-  "users": "Friends"
+  "users": "Friends",
+  "menu": "Menu"
 }
