--- a/src/shared/lib/lang/translations/ru/navigation.json
+++ b/src/shared/lib/lang/translations/ru/navigation.json
@@ -4,5 +4,6 @@
   "messages": "Сообщения",
   "settings": "Настройки",
   "groups": "Сообщества",
-  "users": "Друзья"
+  "users": "Друзья",
+  "menu": "Меню"
 }
