mobile fixes, add titles; fixes

--- a/src/shared/lib/lang/translations/en/auth.json
+++ b/src/shared/lib/lang/translations/en/auth.json
@@ -1,4 +1,8 @@
 {
+  "regTitle": "Привет! Давай знакомиться",
+  "regHiddenTitle": "Зарегистрируйте новый аккаунт",
+  "loginTitle": "С возвращением!",
+  "loginHiddenTitle": "Войдите в свой аккаунт",
   "email": "E-mail",
   "password": "Password",
   "repeatPassword": "Repeat password",
