--- a/src/shared/lib/lang/translations/ru/profile.json
+++ b/src/shared/lib/lang/translations/ru/profile.json
@@ -1,5 +1,10 @@
 {
   "title": "Страница профиля пользователя {{user}}",
   "writePost": "О чем хотите рассказать?",
-  "publish": "Опубликовать"
+  "publish": "Опубликовать",
+  "yourProfile": "Ваш профиль",
+  "userProfile": "Профиль пользователя {{user}}",
+  "yourPosts": "Ваши записи",
+  "userPosts": "Записи пользователя {{user}}",
+  "noPosts": "Записей пока нет..."
 }
