fix components, make users system, add titles, fixes

--- a/src/shared/lib/lang/translations/en/auth.json
+++ b/src/shared/lib/lang/translations/en/auth.json
@@ -1,8 +1,8 @@
 {
-  "regTitle": "Привет! Давай знакомиться",
-  "regHiddenTitle": "Зарегистрируйте новый аккаунт",
-  "loginTitle": "С возвращением!",
-  "loginHiddenTitle": "Войдите в свой аккаунт",
+  "regTitle": "Hi! Let's get acquainted",
+  "regHiddenTitle": "Register a new account",
+  "loginTitle": "Welcome back!",
+  "loginHiddenTitle": "Log in to your account",
   "email": "E-mail",
   "password": "Password",
   "repeatPassword": "Repeat password",
