--- a/src/shared/lib/lang/translations/ru/common.json
+++ b/src/shared/lib/lang/translations/ru/common.json
@@ -5,6 +5,10 @@
   "signIn": "Войти",
   "signUp": "Зарегистрироваться",
   "goToLink": "Перейти на страницу {{link}}",
+  "listEmpty": "Список пока пуст...",
+  "cancel": "Отменить",
+  "accept": "Принять",
+  "reject": "Отклонить",
   "header": {
     "theme": "Тема",
     "settings": "Настройки",
