add page title on auth pages

--- a/src/shared/lib/lang/translations/en/auth.json
+++ b/src/shared/lib/lang/translations/en/auth.json
@@ -1,6 +1,8 @@
 {
+  "regPageTitle": "Registration",
   "regTitle": "Hi! Let's get acquainted",
   "regHiddenTitle": "Register a new account",
+  "loginPageTitle": "Login",
   "loginTitle": "Welcome back!",
   "loginHiddenTitle": "Log in to your account",
   "email": "E-mail",
