--- a/src/shared/lib/lang/translations/ru/auth.json
+++ b/src/shared/lib/lang/translations/ru/auth.json
@@ -1,6 +1,8 @@
 {
+  "regPageTitle": "Регистрация",
   "regTitle": "Привет! Давай знакомиться",
   "regHiddenTitle": "Зарегистрируйте новый аккаунт",
+  "loginPageTitle": "Вход",
   "loginTitle": "С возвращением!",
   "loginHiddenTitle": "Войдите в свой аккаунт",
   "email": "E-mail",
