refactor users page store, design fixes

--- a/src/shared/lib/lang/translations/en/friends.json
+++ b/src/shared/lib/lang/translations/en/friends.json
@@ -5,6 +5,8 @@
   "otherUsers": "Other users",
   "findUsers": "Search",
   "requestSent": "The offer to be friends has been sent.",
+  "friendRemoved": "The user has been removed from friends.",
+  "friendAdded": "The user has been added as a friend.",
   "removeFriend": "Remove from friends",
   "viewProfile": "View profile",
   "addToFriends": "Add to friends",
