--- a/src/shared/lib/lang/translations/ru/friends.json
+++ b/src/shared/lib/lang/translations/ru/friends.json
@@ -5,6 +5,8 @@
   "otherUsers": "Другие пользователи",
   "findUsers": "Поиск",
   "requestSent": "Предложение дружить было отправлено.",
+  "friendRemoved": "Пользователь был удален из друзей.",
+  "friendAdded": "Пользователь был добавлен в друзья.",
   "removeFriend": "Удалить из друзей",
   "viewProfile": "Посмотреть профиль",
   "addToFriends": "Добавить в друзья",
