--- a/src/shared/lib/lang/translations/ru/common.json
+++ b/src/shared/lib/lang/translations/ru/common.json
@@ -9,6 +9,7 @@
   "cancel": "Отменить",
   "accept": "Принять",
   "reject": "Отклонить",
+  "devAlert": "На данный момент проект все еще находится на стадии разработки. То, что вы видите сейчас, могло уже поменяться.",
   "header": {
     "theme": "Тема",
     "settings": "Настройки",
