make conversations list page and conversation header

--- a/src/shared/lib/lang/translations/en/common.json
+++ b/src/shared/lib/lang/translations/en/common.json
@@ -10,6 +10,7 @@
   "accept": "Accept",
   "reject": "Reject",
   "devAlert": "At the moment, the project is still under development. What you see now could have already changed.",
+  "back": "Back",
   "header": {
     "theme": "Theme",
     "settings": "Settings",
