--- a/src/shared/lib/lang/translations/ru/common.json
+++ b/src/shared/lib/lang/translations/ru/common.json
@@ -10,6 +10,7 @@
   "accept": "Принять",
   "reject": "Отклонить",
   "devAlert": "На данный момент проект все еще находится на стадии разработки. То, что вы видите сейчас, могло уже поменяться.",
+  "back": "Назад",
   "header": {
     "theme": "Тема",
     "settings": "Настройки",
