work with messages

--- a/src/shared/lib/lang/translations/en/common.json
+++ b/src/shared/lib/lang/translations/en/common.json
@@ -11,6 +11,7 @@
   "reject": "Reject",
   "devAlert": "At the moment, the project is still under development. What you see now could have already changed.",
   "back": "Back",
+  "sendMessage": "Send message",
   "header": {
     "theme": "Theme",
     "settings": "Settings",
