--- a/src/shared/lib/lang/translations/ru/common.json
+++ b/src/shared/lib/lang/translations/ru/common.json
@@ -11,6 +11,7 @@
   "reject": "Отклонить",
   "devAlert": "На данный момент проект все еще находится на стадии разработки. То, что вы видите сейчас, могло уже поменяться.",
   "back": "Назад",
+  "sendMessage": "Отправить сообщение",
   "header": {
     "theme": "Тема",
     "settings": "Настройки",
