--- a/src/shared/lib/lang/translations/ru/messages.json
+++ b/src/shared/lib/lang/translations/ru/messages.json
@@ -2,5 +2,6 @@
   "pageTitle": "Сообщения",
   "title": "Сообщения",
   "you": "Вы",
-  "yourMessage": "Ваше сообщение"
+  "yourMessage": "Ваше сообщение",
+  "noMessages": "Сейчас ваша переписка с пользователем {{ username }} пуста.\nСделайте первый шаг, отправив сообщение!"
 }
